--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "base44-app",
+  "name": "casegen-app",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -61,7 +61,7 @@
     "zod": "^3.24.2"
   },
   "devDependencies": {
-    "@eslint/js": "^9.19.0",
+    "@eslint/js": "^9.32.0",
     "@flydotio/dockerfile": "^0.7.8",
     "@types/node": "^22.13.5",
     "@types/react": "^18.2.66",
